k8s/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dep
  labels:
    app: app
spec:
  replicas: 1
  selector:
    matchLabels:
      component: app
  template:
    metadata:
      labels:
        component: app
    spec:
      containers:
        - name: app
          image: lf-image
          ports:
          - containerPort: 3333
          volumeMounts:
          - mountPath: "/database"
            name: mypd
      volumes:
        - name: mypd
          persistentVolumeClaim:
            claimName: db
      imagePullSecrets:
        - name: regcred
