k8s/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: svc
  labels:
    app: app
spec:
  ports:
  - port: 80
    targetPort: 3333
    protocol: TCP
  selector:
    component: app
