k8s/base/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - ${LF_SUBDOMAIN}.${KUBE_INGRESS_BASE_DOMAIN}
    secretName: apps-lostfoil-com
  rules:
  - host: ${LF_SUBDOMAIN}.${KUBE_INGRESS_BASE_DOMAIN}
    http:
      paths:
      - path: /
        backend:
          serviceName: svc
          servicePort: 80
